# libvanitas

./: Cargo.toml  README.md  __init__.py  pyproject.toml
src/: lib.rs
